--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,12 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.4.2'  //Spring Data JPA
 
+	compile 'io.springfox:springfox-swagger2:3.0.0'
+	compile 'io.springfox:springfox-boot-starter:3.0.0'
+	compile 'io.springfox:springfox-spring-web:3.0.0'
+
+	compile 'org.springframework.boot:spring-boot-starter-actuator:2.2.2.RELEASE'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testCompile 'org.mockito:mockito-core:2.28.2'
 	testCompile 'org.mockito:mockito-junit-jupiter:2.28.2'
