--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
 	compile 'org.springframework.boot:spring-boot-starter-actuator:2.2.2.RELEASE'
 	compile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '2.3.4'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testCompile 'org.mockito:mockito-core:2.28.2'
