--- a/vet-notification/build.gradle
+++ b/vet-notification/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 
 	compile group: 'org.springframework.amqp', name: 'spring-rabbit', version: '2.3.4'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
